# kokorox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RULES.md  WEBSOCKET.md  dist-workspace.toml  download_all.sh  justfile  main.py  pyproject.toml  run_kokoros.sh  test_tokenize.rs  websocket_test.html
.beads/: beads.base.meta.json  beads.left.meta.json
.cargo/: config.toml
.github/workflow/: releases.yml
.github/workflows/: release.yml
examples/: auto_download_demo.rs
koko/: Cargo.toml
koko/src/: main.rs
koko/wix/: main.wxs
kokoros/: Cargo.toml
kokoros-openai/: Cargo.toml
kokoros-openai/src/: lib.rs
kokoros/src/onn/: ort_base.rs
kokoros/src/tts/: koko.rs  normalize.rs  phonemizer.rs
kokorox/: Cargo.toml
kokorox-openai/: Cargo.toml
kokorox-openai/src/: lib.rs
kokorox-websocket/: Cargo.toml
kokorox-websocket/src/: lib.rs
kokorox/src/: lib.rs  models.rs
kokorox/src/onn/: ort_base.rs  ort_koko.rs
kokorox/src/tts/: koko.rs  mod.rs  normalize.rs  phonemizer.rs  phonemizer_backend.rs  segmentation.rs  simple_phonemizer.rs
kokorox/src/utils/: fileio.rs  hf_cache.rs  mod.rs  mp3.rs  trim.rs  wav.rs
references/: tts_cuda_websocket.py
scripts/: convert_pt_voices.py  download_models.sh  download_voices.py  download_voices.sh  requirements.txt  run_kokoros.sh  run_openai.py  test_server.py
voice-pca/config/: label_studio_config.xml
voice-pca/scripts/: prepare_label_studio.py
