[package]
name = "kokorox"
version = "0.1.2"
edition = "2021"
homepage = "https://github.com/WismutHansen/kokorox"
resolver = "2"
authors = ["Lucas Jin", "Tommy Falkowski"]
description = "Lightning fast text-to-speech with the Kokoro model in rust"

[dependencies]
deepphonemizer = { version = "1.0.0", optional = true }
hound = "3.5.1"
indicatif = "0.17.9"
ndarray = "0.16.1"
lazy_static = "1.5.0"
regex = "1.9.5"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9"
futures-util = "0.3"
tokio = { version = "1.0", features = ["fs", "io-util"] }
ndarray-npy = "0.9.1"
whatlang = "0.16.4"

mp3lame-encoder = "0.2.1"

# Base ONNX Runtime configuration
ort = { version = "2.0.0-rc.10", default-features = true }

[features]
default = ["cpu"]
cpu = []
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
deepphonemizer = ["dep:deepphonemizer"]
